# plan_lateral_planner_ldm

./: CMakeLists.txt  package.xml
config/: driverParams.yaml  mpc.param.yaml  trajectory.rviz
inc/linearDriverModel/: linearDriverModel.hpp  linearDriverModel_controlLogic.hpp  linearDriverModel_interfaces.hpp
inc/linearDriverModelDriverModel/: linearDriverModel_driverModel.hpp
inc/linearDriverModelPlanner/: linearDriverModel_segmentPlanner.hpp
inc/linearDriverModelUtilities/: linearDriverModel_coordinateTransforms.hpp  linearDriverModel_polynomialSubfunctions.hpp
include/: wrapper.hpp  wrapperPlanLatLaneFollowLdm.hpp
include/laneletHandler/: laneletMapHandler.hpp
include/linearDriverModel/: emg_linearDriverModel.hpp  emg_linearDriverModel_controlLogic.hpp  emg_linearDriverModel_interfaces.hpp
include/linearDriverModelDriverModel/: emg_linearDriverModel_driverModel.hpp
include/linearDriverModelPlanner/: emg_linearDriverModel_segmentPlanner.hpp
include/linearDriverModelUtilities/: emg_linearDriverModel_clothoidSubfunctions.hpp  emg_linearDriverModel_coordinateTransforms.hpp  emg_linearDriverModel_polynomialSubfunctions.hpp
include/trajectoryController/: trajectoryPlanner.hpp
include/trajectoryPlanner/: trajectoryPlanner.hpp
include/utilities/: rosUtilities.hpp  waypoint_converter.hpp
laneletMaps/: mw.osm  uni_jkk.osm  uni_jkk_full.osm
launch/: driverParams.yaml  lane_keep.launch  lane_keep.launch.py  plan_lat_lane_follow_ldm.launch.py
msg/: Derivatives.msg  PointList.msg  PolynomCoeffs.msg  Polynomial.msg  PolynomialCoeffs.msg  Scenario.msg  Trajectory.msg
src/: emg_linearDriverModel.cpp  emg_linearDriverModel.hpp  emg_linearDriverModel_controlLogic.cpp  emg_linearDriverModel_controlLogic.hpp  emg_linearDriverModel_interfaces.hpp  emg_trpLat_linearDriverModel.cmake  linearDriverModel.cpp  linearDriverModel_controlLogic.cpp  trajectoryPlanner.cpp  wrapper.cpp  wrapperPlanLatLaneFollowLdm.cpp
src/functionCode/inc/linearDriverModel/: linearDriverModel_interfaces.hpp
src/functionCode/inc/linearDriverModelDriverModel/: linearDriverModel_driverModel.hpp
src/functionCode/inc/linearDriverModelUtilities/: linearDriverModel_polynomialSubfunctions.hpp
src/functionCode/src/: linearDriverModel_controlLogic.cpp
src/functionCode/src/linearDriverModelDriverModel/: linearDriverModel_driverModel.cpp
src/functionCode/src/linearDriverModelUtilities/: linearDriverModel_coordinateTransforms.cpp
src/laneletHandler/: laneletMapHandler.cpp
src/linearDriverModelDriverModel/: emg_linearDriverModel_driverModel.cpp  emg_linearDriverModel_driverModel.hpp  linearDriverModel_driverModel.cpp
src/linearDriverModelPlanner/: emg_linearDriverModel_segmentPlanner.cpp  emg_linearDriverModel_segmentPlanner.hpp  emg_linearDriverModel_trajectoryEvaluation.cpp  emg_linearDriverModel_trajectoryEvaluation.hpp  emg_linearDriverModel_trajectoryPlanner.cpp  emg_linearDriverModel_trajectoryPlanner.hpp  linearDriverModel_segmentPlanner.cpp
src/linearDriverModelUtilities/: emg_linearDriverModel_clothoidSubfunctions.cpp  emg_linearDriverModel_clothoidSubfunctions.hpp  emg_linearDriverModel_coordinateTransforms.cpp  emg_linearDriverModel_coordinateTransforms.hpp  emg_linearDriverModel_polynomialSubfunctions.cpp  emg_linearDriverModel_polynomialSubfunctions.hpp  linearDriverModel_polynomialSubfunctions.cpp
src/utilities/: mpc_steering_path.cpp  rosUtilities.cpp  waypoint_converter.cpp
srv/: GetLaneletScenario.srv
