<?xml version="1.0"?>
<package format="2">
  <name>lane_keep_system</name>
  <version>0.0.0</version>
  <description>The lane_keep_system package</description>

  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>autoware_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>message_runtime</depend>
  <depend>lanelet2_extension</depend>

  <exec_depend>rviz</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>mpc_follower</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>